# SimpleChat

./: .gitignore  Makefile
app/: .env.example  Makefile  pyproject.toml
app/src/: generate_tokens.py
app/src/simplechat/: __init__.py  __main__.py  models.py  settings.py
app/src/simplechat/test/: __init__.py
web/: .postcssrc  .proxyrc.json  Makefile  package-lock.json  package.json  tailwind.config.js
web/src/: index.html
web/src/css/: index.css
web/src/js/: index.js
